remove wrong margins & fixed sidebar width

--- a/client/app/styles/index.styl
+++ b/client/app/styles/index.styl
@@ -31,6 +31,7 @@ aside
         margin: 0
 
 [role="navigation"]
+    width: 13.75em
     a
         display: block
         text-decoration: none
@@ -43,11 +44,12 @@ aside
             background-color: $grey-01-alpha
 
     .submenu
-        margin-left: 3em
+        margin: .5em 0 0 3em
 
         a
             padding: 0.5em 1em
             color: $grey-08
+            margin: 0
 
         .router-link-active
             color: white
